--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -35,3 +35,24 @@
     margin-left: auto;
   }
 }
+
+@media (max-width: 428px){
+  .headerContent{
+    max-width: 428px;
+
+    nav{
+      margin-left: 1rem;
+      height: 5rem;
+      display: flex;
+
+      a{
+        display: flex;
+        flex-wrap: nowrap;
+        & + a{
+          margin-left: 0.5rem;
+          width: 100px;
+        }
+      }
+    }
+  }
+}
