--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -40,6 +40,10 @@
   .headerContent{
     max-width: 428px;
 
+    a{
+      margin-left: 15px;
+    }
+
     nav{
       margin-left: 1rem;
       height: 5rem;
