--- a/src/pages/board/task.module.scss
+++ b/src/pages/board/task.module.scss
@@ -39,7 +39,12 @@
 
 @media (max-width: 428px){
   .container{
-    max-width: 410px;
+    max-width: 400px;
     margin: 2rem auto;
+
+    p{
+      word-break: break-all;
+      text-align: justify;
+    }
   }
 }
