fix: limitando caracter da tag p

--- a/src/pages/board/task.module.scss
+++ b/src/pages/board/task.module.scss
@@ -9,6 +9,8 @@
     color: #F2F6FC;
     font-size: 1rem;
     line-height: 150%;
+    word-break: break-all;
+    text-align: justify;
   }
 
   .actions{
