--- a/src/pages/board/styles.module.scss
+++ b/src/pages/board/styles.module.scss
@@ -62,6 +62,10 @@
     color: #F2F6FC;
     font-size: 1rem;
     line-height: 150%;
+    max-width: 80ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
@@ -115,8 +119,10 @@
 
   .taskList{
     p{
-      word-break: break-all;
-      text-align: justify;
+      max-width: 50ch;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
